# keyboardio-hid-rs

./: Cargo.toml  README.md  avr-atmega32u4.json  rust-toolchain.toml
.cargo/: config.toml
keyboardio-utils/: Cargo.toml
keyboardio-utils/src/: lib.rs
src/: hid_report_observer.rs  hid_settings.rs  keyboard.rs  lib.rs  test.rs
src/keyboard/: boot.rs  media.rs  nkro.rs  system_control.rs
